Edit the Download Resume link

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="columns download">
               <p>
                 <a
-                  href="https://api.amu.ac.in/storage//images/empcv/615-1637561344.pdf"
+                  href="https://api.amu.ac.in/storage//images/empcv/615-1644069205.pdf"
                   target="_blank"
                   class="button"
                   ><i class="fa fa-download"></i>Download Resume</a
@@ -717,7 +717,10 @@
     </section>
     <!-- Portfolio Section End-->
 
-    <section id="thrust_area" style="padding: 80px 0px; background-color: #2B2B2B;;">
+    <section
+      id="thrust_area"
+      style="padding: 80px 0px; background-color: #2b2b2b ;"
+    >
       <div class="row skill">
         <div class="three columns header-col">
           <h1>
