--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <a href="#"><i class="fa fa-google-plus"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/nadeem-ur-rehman-8414a426/"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa fa-instagram"></i></a>
@@ -836,7 +836,7 @@
               <a href="#"><i class="fa fa-google-plus"></i></a>
             </li>
             <li>
-              <a href="#"><i class="fa fa-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/nadeem-ur-rehman-8414a426/"><i class="fa fa-linkedin"></i></a>
             </li>
             <li>
               <a href="#"><i class="fa fa-instagram"></i></a>
